tests/paczka1/fuzzy1/14514155.err
Error in line 2: zjAfuM A769 89,1
Error in line 15: zjAfuM S336 -1,3
Error in line 16: eqeQ A769 62,6
Error in line 10: zjAfuM S336 16,5
Error in line 26: A769 S114 20,5
Error in line 28: EM1Yw8VeW8 S690 14,5
Error in line 34: A769 S690 44,6
